--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "rollup": "^2.79.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-toastify": "^10.0.5",
+    "react-icons": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
