--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@react-oauth/google": "^0.12.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "qrcode.react": "^3.1.0",
