--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "dependencies": {
     "@material/web": "^1.4.0",
     "@mui/icons-material": "^5.15.14",
+    "@react-oauth/google": "^0.12.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@react-oauth/google": "^0.12.1",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-qr-code": "^2.0.12",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "6.21.0",
     "react-scripts": "5.0.1",
-    "rollup": "^2.79.1",
-    "web-vitals": "^2.1.4",
     "react-toastify": "^10.0.5",
-    "react-icons": "^5.0.1"
+    "rollup": "^2.79.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
