--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
+    "flutterwave-react-v3": "^1.3.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
