--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@material/web": "^1.4.0",
     "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.15",
     "@react-oauth/google": "^0.12.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@testing-library/jest-dom": "^5.17.0",
