--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X
+REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d
 GENERATE_SOURCEMAP=false
