--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-paystack": "^5.0.0",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "6.21.0",
     "react-scripts": "^5.0.1",
