--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "flutterwave-react-v3": "^1.3.2",
@@ -23,9 +25,12 @@
     "react-icons": "^5.0.1",
     "react-paystack": "^5.0.0",
     "react-qr-code": "^2.0.12",
+    "react-redux": "^9.1.1",
     "react-router-dom": "6.21.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "rollup": "^2.79.1",
     "sass": "^1.72.0",
     "web-vitals": "^2.1.4"
@@ -57,6 +62,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/redux-logger": "^3.0.13",
+    "i": "^0.3.7",
+    "npm": "^10.5.2",
     "tailwindcss": "^3.4.1"
   }
 }
