--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "flutterwave-react-v3": "^1.3.2",
+    "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
