--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "flutterwave-react-v3": "^1.3.2",
+    "formik": "^2.4.6",
     "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -35,7 +36,8 @@
     "redux-persist": "^6.0.0",
     "rollup": "^2.79.1",
     "sass": "^1.72.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
