--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-persist": "^6.0.0",
     "rollup": "^2.79.1",
     "sass": "^1.72.0",
+    "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
