--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@anvilco/anvil": "^3.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material/web": "^1.4.0",
@@ -21,7 +22,9 @@
     "flowbite-react": "^0.7.5",
     "flutterwave-react-v3": "^1.3.2",
     "formik": "^2.4.6",
+    "fs": "^0.0.1-security",
     "moment": "^2.30.1",
+    "path": "^0.12.7",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,11 +34,13 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "6.21.0",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "rollup": "^2.79.1",
     "sass": "^1.72.0",
+    "styled-components": "^6.1.11",
     "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
