--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X
 REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d
 GENERATE_SOURCEMAP=false
-VITE_APP_API_URL=ss
+REACT_APP_NODE_ENV=production
+REACT_APP_VITE_APP_API_URL=https://guardtrolapi.alphatrol.com/
 ANVIL_API_TOKEN=ss
