--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material/web": "^1.4.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
+    "@paystack/inline-js": "^2.18.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
