--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@anvilco/anvil": "^3.3.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@material/web": "^1.4.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
@@ -19,15 +21,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "flutterwave-react-v3": "^1.3.2",
     "formik": "^2.4.6",
     "fs": "^0.0.1-security",
+    "js-xlsx": "^0.8.22",
     "moment": "^2.30.1",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-paystack": "^5.0.0",
@@ -44,6 +50,7 @@
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
@@ -76,6 +83,6 @@
     "@types/redux-logger": "^3.0.13",
     "i": "^0.3.7",
     "npm": "^10.5.2",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   }
 }
