--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "formik": "^2.4.6",
     "fs": "^0.0.1-security",
     "js-xlsx": "^0.8.22",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
