--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ REACT_APP_NODE_ENV=production
 REACT_APP_VITE_APP_API_URL=https://guardtrolapi.alphatrol.com/
 # REACT_APP_VITE_APP_API_URL=http://localhost:5000/
 ANVIL_API_TOKEN=ss
+
+FE_FTP=dev@test.guardtrol.alphatrol.com
+FE_HOST=ftp.guardtrol.com
+FE_PASSWORD=]Uuf+Db${6Lm
