--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X
 REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d
 GENERATE_SOURCEMAP=false
 REACT_APP_NODE_ENV=production
-REACT_APP_VITE_APP_API_URL=http://guardtroltestapi.alphatrol.com/
-# REACT_APP_VITE_APP_API_URL=https://guardtrolapi.alphatrol.com/
+# REACT_APP_VITE_APP_API_URL=http://guardtroltestapi.alphatrol.com/
+REACT_APP_VITE_APP_API_URL=https://guardtrolapi.alphatrol.com/
 # REACT_APP_VITE_APP_API_URL=http://localhost:5000/
 ANVIL_API_TOKEN=ss
 
