--- a/.env
+++ b/.env
@@ -1,12 +1,9 @@
 REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X
-REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d
+REACT_APP_PAYSTACK_KEY=pk_live_416911733368dd26a192e925467fe800eaea8aeb
+# REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X
+# REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d
 GENERATE_SOURCEMAP=false
 REACT_APP_NODE_ENV=production
-# REACT_APP_VITE_APP_API_URL=http://guardtroltestapi.alphatrol.com/
 REACT_APP_VITE_APP_API_URL=https://guardtrolapi.alphatrol.com/
-# REACT_APP_VITE_APP_API_URL=https://guardtrol-api.vercel.app/
-# REACT_APP_VITE_APP_API_URL=http://localhost:5000/
 ANVIL_API_TOKEN=ss
-
-
-CI = false
+CI=false
