--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@vitejs/plugin-react-swc": "^3.6.0",
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
+    "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
     "flutterwave-react-v3": "^1.3.2",
@@ -38,6 +40,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
@@ -52,6 +55,7 @@
     "redux-persist": "^6.0.0",
     "rollup": "^2.79.1",
     "sass": "^1.72.0",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4",
@@ -59,8 +63,10 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "cross-env NODE_ENV=development node setupEnv.js && react-scripts start",
+    "start": "cross-env NODE_ENV=production node setupEnv.js && react-scripts start",
+    "build": "cross-env NODE_ENV=production node setupEnv.js && react-scripts build",
+    "build-staging": "cross-env NODE_ENV=development node setupEnv.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start_mdc_webpack": "webpack serve"
