--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,10 @@ jobs:
       # Install dependencies and build the project
       - name: 🔨 Build the project
         run: |
+
           npm install
-          CI=false npm run build-staging
+          cp .env.staging .env
+          CI=false npm run build
 
       # Sync files via FTP
       - name: 📂 Sync files via FTP
