--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
           npm install
           cp .env.staging .env
-          CI=false npm run build
+          CI=false npm run build-staging
 
       # Sync files via FTP
       - name: 📂 Sync files via FTP
