--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,18 @@ jobs:
       # Checkout the repository
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
+      # Install dependencies only once
+      - name: 📦 Install dependencies
+        run: |
+          npm install
 
       # Install dependencies and build the project
-      - name: 🔨 Build the project
+      - name: 🔨 Build project
         run: |
-
-          npm install
           cp .env.staging .env
-          CI=false npm run build-staging
+          npm run build-staging
+        env:
+          NODE_ENV: production
 
       # Sync files via FTP
       - name: 📂 Sync files via FTP
