--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browser-image-compression": "^2.0.2",
     "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.5",
@@ -44,7 +45,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "react-paystack": "^5.0.0",
+    "react-paystack": "^6.0.0",
     "react-qr-code": "^2.0.12",
     "react-redux": "^9.1.1",
     "react-router-dom": "6.21.0",
@@ -63,10 +64,10 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node setupEnv.js && react-scripts start",
-    "start": "cross-env NODE_ENV=production node setupEnv.js && react-scripts start",
-    "build": "cross-env NODE_ENV=production node setupEnv.js && react-scripts build",
-    "build-staging": "cross-env NODE_ENV=staging node setupEnv.js && react-scripts build",
+    "dev": "cross-env NODE_ENV=development REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d REACT_APP_API_BASE_URL=http://localhost:5000/api/ REACT_APP_SOCKET_API_BASE_URL=http://localhost:5000 REACT_APP_NODE_ENV=development REACT_APP_ASSET_URL=http://localhost:5000/  && react-scripts start",
+    "start": "react-scripts start",
+    "build": "cross-env NODE_ENV=production REACT_APP_FLUTTERWAVE_KEY=FLWPUBK-a1be03107079ab0523984695c59cbbed-X REACT_APP_PAYSTACK_KEY=pk_live_416911733368dd26a192e925467fe800eaea8aeb REACT_APP_API_BASE_URL=https://guardtrolapi.alphatrol.com/api/ REACT_APP_SOCKET_API_BASE_URL=https://guardtrolapi.alphatrol.com REACT_APP_ASSET_URL=https://guardtrolapi.alphatrol.com/ REACT_APP_NODE_ENV=production GENERATE_SOURCEMAP=false && react-scripts build",
+    "build-staging": "cross-env NODE_ENV=staging REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d REACT_APP_API_BASE_URL=https://guardtroltestapi.alphatrol.com/api/ REACT_APP_SOCKET_API_BASE_URL=https://guardtroltestapi.alphatrol.com REACT_APP_NODE_ENV=staging REACT_APP_ASSET_URL=https://guardtroltestapi.alphatrol.com/ && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start_mdc_webpack": "webpack serve"
