--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -31,3 +32,4 @@ yarn-error.log*
 /src/email-templates/package-lock.json
 /src/email-templates/package.json
 /src/email-templates/tailwind.config.js
+.env
