--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
   "scripts": {
     "dev": "cross-env REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d REACT_APP_API_BASE_URL=http://localhost:5000/api/ REACT_APP_SOCKET_API_BASE_URL=http://localhost:5000 REACT_APP_NODE_ENV=development REACT_APP_ASSET_URL=http://localhost:5000/  && react-scripts start",
     "start": "react-scripts start",
-    "build": "cross-env REACT_APP_FLUTTERWAVE_KEY=FLWPUBK-a1be03107079ab0523984695c59cbbed-X REACT_APP_PAYSTACK_KEY=pk_live_416911733368dd26a192e925467fe800eaea8aeb REACT_APP_API_BASE_URL=https://guardtrolapi.alphatrol.com/api/ REACT_APP_SOCKET_API_BASE_URL=https://guardtrolapi.alphatrol.com REACT_APP_ASSET_URL=https://guardtrolapi.alphatrol.com/ REACT_APP_NODE_ENV=production GENERATE_SOURCEMAP=false && react-scripts build",
-    "build-staging": "cross-env REACT_APP_FLUTTERWAVE_KEY=FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X REACT_APP_PAYSTACK_KEY=pk_test_68a44d9db9eca0558935c5eac89e94144b35570d REACT_APP_API_BASE_URL=https://guardtroltestapi.alphatrol.com/api/ REACT_APP_SOCKET_API_BASE_URL=https://guardtroltestapi.alphatrol.com REACT_APP_NODE_ENV=staging REACT_APP_ASSET_URL=https://guardtroltestapi.alphatrol.com/ && react-scripts build",
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
+    "build:prod": "env-cmd -f .env.production react-scripts build",
+    "build:dev": "env-cmd -f .env.development react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start_mdc_webpack": "webpack serve"
@@ -93,6 +94,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/redux-logger": "^3.0.13",
+    "env-cmd": "^10.1.0",
     "i": "^0.3.7",
     "npm": "^10.5.2",
     "tailwindcss": "^3.4.3"
