--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         if: github.ref == 'refs/heads/staging'
         run: |
           export NODE_OPTIONS=--max-old-space-size=4096
-          CI=false npm run build-staging
+          CI=false npm run build
         env:
           REACT_APP_FLUTTERWAVE_KEY: FLWPUBK_TEST-6a146f6e7fa13c60abe1b94f4d67e516-X
           REACT_APP_PAYSTACK_KEY: pk_test_68a44d9db9eca0558935c5eac89e94144b35570d
