--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           export NODE_OPTIONS=--max-old-space-size=4096
-          CI=false npm run build-main
+          CI=false npm run build
         env:
           REACT_APP_FLUTTERWAVE_KEY: FLWPUBK-a1be03107079ab0523984695c59cbbed-X
           REACT_APP_PAYSTACK_KEY: pk_live_416911733368dd26a192e925467fe800eaea8aeb
