--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-paystack": "^6.0.0",
+    "react-player": "^2.16.0",
     "react-qr-code": "^2.0.12",
     "react-redux": "^9.1.1",
     "react-router-dom": "6.21.0",
