--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@mui/material": "^5.15.15",
     "@paystack/inline-js": "^2.18.1",
     "@react-oauth/google": "^0.12.1",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@reduxjs/toolkit": "^2.3.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/redux": "^3.6.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
@@ -52,7 +53,7 @@
     "react-router-dom": "6.21.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "rollup": "^2.79.1",
@@ -95,7 +96,25 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__template": "^7.4.4",
+    "@types/bonjour": "^3.5.13",
+    "@types/graceful-fs": "^4.1.9",
+    "@types/hoist-non-react-statics": "^3.3.5",
+    "@types/http-proxy": "^1.17.15",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/parse-json": "^4.0.2",
+    "@types/prettier": "^3.0.0",
+    "@types/prop-types": "^15.7.13",
+    "@types/raf": "^3.4.3",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-toastify": "^4.1.0",
     "@types/redux-logger": "^3.0.13",
+    "@types/redux-persist": "^4.3.1",
+    "@types/stack-utils": "^2.0.3",
+    "@types/stylis": "^4.2.6",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/use-sync-external-store": "^0.0.6",
     "env-cmd": "^10.1.0",
     "i": "^0.3.7",
     "npm": "^10.5.2",
